Fixing overflow problem

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header {
   width: 200px;
   height: auto;
   border-radius: 30px;
+  cursor: pointer;
 }
 
 #title {
@@ -215,6 +216,7 @@ nav ul li a:hover {
   height: 400px;
   border: 3px solid transparent;
   white-space: nowrap;
+  overflow-x: hidden;
 }
 
 .carrusel-marcas h3 {
@@ -313,6 +315,7 @@ footer {
 #footer-logo {
   width: 10rem;
   padding: 1rem;
+  cursor: pointer;
 }
 
 .log-info p {
